@startuml
namespace Modele{
class Observation{



  +void generateMesh(bool histogramme)


}
class Feature{
   -float t
   -float b
   -float r
   -float l
   -int nombre_observation

}

class Scale{
   -ArrayList<int> scales
   -ArrayList<PhongMaterial> baseColor
   +int getScaleFromScale(int scale)
   +PhongMaterial getMaterialFromScale(int scale)


}
class Requete{

  -String scientific_name
  -Date debut
  -Date fin
    
    


    + Observetion sendrequest()
    + String getAtGeoHash(String GeoHash)
    +{static} String getGeoHashData(String GeoHash)
    + String[] senRequestSimilar()
}
class Jsonreader{
      {static} String[] getTenFirstNames(String json)
      {static}Observation readJson(Json json,PhongMaterial[] materials)
      {static}String[] getSpeciesList(String json)
}
Feature"1"--*"0..n"Observation
Requete"1"--"1"Observation :< "est généré par "
Scale"1"--*"0..n"Observation
}
class View{
  +void display(Observation observation)
}
class Controller{
  +Initialize()
}


Controller--Modele
View--Controller


@enduml
